<resources>
    <string name="app_name">HITA课表</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_hint">输入内容…</string>
    <string name="date_format_1">yyyy年M月d日</string>
    <string name="date_format_3">yyyy年M月d日 hh时mm分</string>
    <string name="date_format_2">M月d日</string>
    <string name="date_format_am">上午hh:mm</string>
    <string name="date_format_pm">下午hh:mm</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="date_format_with_prefix">"%s %s"</string>
    <string name="hint_eas_username">统一身份认证账号</string>
    <string name="hint_eas_password">密码</string>
    <string name="hint_eas_login">请在校园内网环境下登录</string>
    <string name="login">登录</string>
    <string name="import_timetable">导入课表</string>
    <string name="pick_import_term">选择导入学期</string>
    <string name="timetable_tab_title">第%d周</string>
    <string name="import_success">导入成功</string>
    <string name="import_failed">导入失败</string>
    <string name="button_import">导入</string>
    <string name="no_valid_date">请设置开始日期</string>
    <string name="title_import_timetable">课表导入</string>
    <string name="schedule_list_item_pattern">第%d节课</string>
    <string name="timeline_head_free_title">今日空闲</string>
    <string name="timeline_head_free_subtitle">享受当下！</string>
    <string name="timeline_head_goodnight_title">夜深了</string>
    <string name="timeline_head_goodnight_subtitle">晚安！</string>
    <string name="timeline_head_goodmorning_title">早上好</string>
    <string name="timeline_head_lunch_title">午餐时间</string>
    <string name="timeline_head_lunch_subtitle">去哪吃?</string>
    <string name="timeline_head_dinner_title">晚餐时间</string>
    <string name="timeline_head_dinner_subtitle">去哪吃?</string>
    <string name="timeline_head_normal_title">暂时没有事件</string>
    <string name="timeline_head_normal_subtitle">自由安排</string>
    <string name="timeline_head_finish_title">全部结束</string>
    <string name="timeline_head_finish_subtitle">享受生活吧！</string>
    <string name="timeline_head_nulluser_title">请先登录</string>
    <string name="timeline_head_nulluser_subtitle">登录后享受更多服务</string>
    <string name="timeline_head_nulldata_title">无数据</string>
    <string name="timeline_head_nulldata_subtitle">请创建或导入课表</string>
    <string name="timeline_head_notthisterm_title">假期</string>
    <string name="timeline_head_notthisterm_subtitle">本学期未开始！</string>
    <string name="title_activity_user_profile">ActivityUserProfile</string>
    <string name="shortcut_empty_classroom_short">空教室</string>
    <string name="shortcut_empty_classroom_long">空教室查询</string>
    <string name="shortcut_explore_short">希塔</string>
    <string name="shortcut_explore_long">希塔HITA</string>
    <string name="shortcut_timetable_short">课表</string>
    <string name="shortcut_timetable_long">课程表</string>
    <string name="shortcut_news_short">信息窗</string>
    <string name="shortcut_news_long">信息窗口</string>
    <string name="title_activity_search">ActivitySearch</string>
    <string name="update_dialog_title">有可用更新</string>
    <string name="update_dialog_mes1">新版本</string>
    <string name="update_dialog_mes2">发布时间</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancel">取消</string>
    <string name="guide_1p">欢迎使用HITSZ助手，以下为使用导航</string>
    <string name="guide_1s">您可以点击其他位置跳过导航</string>
    <string name="guide_3p">点击展开抽屉</string>
    <string name="guide_3s">功能都在这啦</string>
    <string name="guide_5p">点击进入日程表</string>
    <string name="guide_5s">加强版课程表</string>
    <string name="guide_6p">这里可以进行搜索</string>
    <string name="guide_6s">HIT全局搜...</string>
    <string name="guide_7p">登录HITSZ助手账号</string>
    <string name="guide_7s">开启精彩体验吧</string>
    <string name="notif_installQQ">请安装QQ后再反馈！</string>
    <string name="drawer_username_null">登录</string>
    <string name="drawer_signature_null">HITSZ助手账号</string>
    <string name="drawer_signature_none">无签名</string>
    <string name="main_drawer_menu_jwts">教务系统</string>
    <string name="main_drawer_menu_ut">大学城内部网</string>
    <string name="main_drawer_menu_info">校园动态</string>
    <string name="main_drawer_menu_search">搜索</string>
    <string name="main_drawer_menu_darkmode">深色模式</string>
    <string name="main_drawer_menu_settings">设置</string>
    <string name="main_drawer_menu_report">意见反馈</string>
    <string name="main_drawer_menu_about">关于HITSZ助手</string>
    <string name="main_drawer_menu_curriculums">课表</string>
    <string name="main_drawer_menu_studyassistant">助手</string>
    <string name="main_drawer_menu_hita">希塔</string>
    <string name="main_drawer_menu_theme">主题</string>
    <string name="punch_success_normal">打卡成功</string>
    <string name="punch_success_happy">打卡成功，祝你开心每一天</string>
    <string name="punch_success_sad">打卡成功，加油呀！</string>
    <string name="load_news_failed">加载新闻失败</string>
    <string name="load_lecture_failed">加载讲座失败</string>
    <string name="load_annouce_failed">加载通知失败</string>
    <string name="punch_failed">打卡失败！</string>
    <string name="maintab_navi">校园</string>
    <string name="maintab_today">今日</string>
    <string name="maintab_events">事务</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="navi_jw_title">教务功能</string>
    <string name="navi_jw_jw_p">掌上教务</string>
    <string name="navi_jw_jw_s">告别网页</string>
    <string name="navi_jw_emptyclassroom_s">找地方学习</string>
    <string name="navi_jw_xl_s">何时放假</string>
    <string name="navi_jw_xl_p">校历</string>
    <string name="navi_hint_text">长按卡片可以拖动调整次序哦</string>
    <string name="navi_hint_button">知道啦</string>
    <string name="navi_campus_title">校园生活</string>
    <string name="navi_campus_vote_p">态度墙</string>
    <string name="navi_campus_billboard_p">食堂排行</string>
    <string name="navi_mood_greet">Hi, 今天心情如何？</string>
    <string name="navi_mood_title">今日校园心情</string>
    <string name="navi_mood_point">分</string>
    <string name="ade_title">添加课时</string>
    <string name="ade_arrangement">日程</string>
    <string name="ade_ddl">DDL</string>
    <string name="ade_course">课程</string>
    <string name="ade_exam">考试</string>
    <string name="ade_namehint">输入名称…</string>
    <string name="ade_tag2">标签2</string>
    <string name="ade_tag3">标签3</string>
    <string name="ade_pick_subject">选择科目</string>
    <string name="ade_pick_time">设置上课时间段</string>
    <string name="ade_pick_task">处理任务</string>
    <string name="ade_pick_location">选择地点</string>
    <string name="ade_wholeday">全天</string>
    <string name="add_laf_detail_hint">输入详细内容</string>
    <string name="button_post">发布</string>
    <string name="usercenter_sync_autoupload">备份所有数据到服务器</string>
    <string name="usercenter_sync_autoupload_hint">当时间表变更时，APP将自动备份数据</string>
    <string name="usercenter_sync_download">下载云端数据到本地</string>
    <string name="usercenter_sync_download_hint">这将清除本地数据，并置课表为教务课表</string>
    <string name="usercenter_info_bind">认证学号</string>
    <string name="usercenter_info_nick">昵称</string>
    <string name="usercenter_info_signature">个性签名</string>
    <string name="usercenter_info_username">账号</string>
    <string name="usercenter_info_school">学院</string>
    <string name="usercenter_info_realname">姓名</string>
    <string name="days">%d天</string>
    <string name="mood_title">校园心情指数</string>
    <string name="signup_username">设置登录账号</string>
    <string name="signup_password">密码</string>
    <string name="signup_confirm_password">确认密码</string>
    <string name="signup_nick">昵称</string>
    <string name="grkb_import_xnxq">导入学期</string>
    <string name="grkb_upload_teacher_hint">教师搜索现已改用官方教师展示平台，故该功能不建议开启</string>
    <string name="grkb_attention">请注意</string>
    <string name="grkb_attention_hint">导入后请务必核对教务网站上、学校发布的官方课表！</string>
    <string name="grkb_upload_teacher">帮助完善教师数据库</string>
    <string name="cjgl_xnxq">查询学期</string>
    <string name="bind_stun_title">验证哈工大深圳学号</string>
    <string name="bind_stun_stunum">学号</string>
    <string name="bind_stun_password">统一身份登录密码</string>
    <string name="add_task_title">添加待办</string>
    <string name="add_task_name_hint">输入任务名...</string>
    <string name="add_task_everyday">每日任务</string>
    <string name="add_task_limitation">任务期限</string>
    <string name="add_attitude_title">发布态度话题</string>
    <string name="add_attitude_name">输入标题</string>
    <string name="add_attitude_image">添加图片</string>
    <string name="hitsz">哈工大深圳</string>
    <string name="login_jwts_tysfrzdl">统一身份认证登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="hita_account">HITSZ助手</string>
    <string name="app_slogan">Harbin Institute of Technology</string>
    <string name="navi_campus_card_p">校园卡</string>
    <string name="navi_jw_emptyclassroom_p">空教室查询</string>
    <string name="notif_importdatafirst">请先创建或导入课表！</string>
    <string name="logout_message">注销后，本地所有数据将会被清空</string>
    <string name="tt_monday">一</string>
    <string name="tt_tuesday">二</string>
    <string name="tt_wednesday">三</string>
    <string name="tt_thursday">四</string>
    <string name="tt_friday">五</string>
    <string name="tt_saturday">六</string>
    <string name="tt_sunday">日</string>
    <string name="tt_wholeday">全天</string>
    <plurals name="user_center_you_have_punched">
        <item quantity="other">累计%d天校园心情</item>
    </plurals>
    <string name="date_day">%d日</string>
    <string name="week">第%d周</string>
    <string name="week_str">第%s周</string>
    <plurals name="count_week">
        <item quantity="other">%d星期</item>
    </plurals>
    <plurals name="count_week_simplified">
        <item quantity="other">%d周</item>
    </plurals>
    <string name="navi_semister_not_begun">学期未开始</string>
    <string name="navi_semister_no_data">无学期数据</string>
    <string name="navi_settings_title">设置导航页内容</string>
    <string name="ade_no_suitable_allocation">没有找到合适的分配时间！</string>
    <string name="ade_set_time_first">请先设置日期！</string>
    <string name="pick_location">选择地点</string>
    <string name="ade_exam_name">输入考试名称…</string>
    <string name="ade_set_time_period">设置日期与时间段</string>
    <string name="ade_set_time_date">设置日期与时间</string>
    <string name="ade_set_date">设置日期</string>
    <string name="label_activity_attitude">HITSZ态度墙</string>
    <string name="label_activity_tasks">待办事项</string>
    <string name="task_card_title_tasknum">待办</string>
    <string name="task_card_title_notask">无待办</string>
    <string name="task_card_title_ddlnum">DDL</string>
    <string name="task_card_title_noddl">无DDL</string>
    <string name="exam_card_noexam">无考试</string>
    <string name="wholeday">全天</string>
    <string name="dialog_pick_course_title">设置课程时间</string>
    <string name="dialog_pick_course_to">到</string>
    <string name="dialog_pick_course_label">选择上课周数：</string>
    <string name="period">第%d节</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="tda_tomorrow">后天</string>
    <string name="pick_single_time_label1">周</string>
    <string name="pick_single_time_label2">时</string>
    <string name="pick_single_time_label3">分</string>
    <string name="menu_timeable_draw_line">显示当前时间线</string>
    <string name="menu_timeable_color">科目颜色</string>
    <string name="menu_timeable_random_allocate">随机分配颜色</string>
    <string name="dialog_title_random_allocate">是否随机生成各科目颜色？</string>
    <string name="dialog_title_set_total_weeks">设置总周数</string>
    <string name="attention">注意</string>
    <string name="dialog_message_delete_curriculum">删除课表将删除一切与之关联的事件、科目、任务，确定吗？</string>
    <string name="curriculum_manager_satrtat">开始日期</string>
    <string name="menu_timeable_curriculum">课表管理</string>
    <string name="search">搜索</string>
    <string name="name_ua_and_pp">用户与隐私协议</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="eas_verify_title">统一身份认证</string>
</resources>