<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_rounded_background"
    android:orientation="vertical"
    android:transitionName="card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_weight="1"
            android:text="@string/eas_verify_title"
            android:textColor="?attr/textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/element_rounded_button_bg_primary"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:finalCornerAngle="16dp"
            app:initialCornerAngle="16dp"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="5dp"
            app:spinning_bar_width="4dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_eas_username"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_eas_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:singleLine="true" />

</LinearLayout>


