<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:visibility="visible">

        <View
            android:layout_width="@dimen/timetable_label_width"
            android:layout_height="28dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_monday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_tuesday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_wednesday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_thursday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_friday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_saturday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/element_round_grey"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/tt_sunday"
                android:textColor="?attr/textColorPrimary"
                android:textSize="10sp" />
        </FrameLayout>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />

</LinearLayout>